--- a/feedback.html
+++ b/feedback.html
@@ -21,6 +21,7 @@
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       width: 400px;
+      max-width: 90%; /* Make the container responsive */
     }
 
     h2 {
@@ -42,6 +43,12 @@
       margin-bottom: 20px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      transition: border-color 0.3s ease; /* Add transition for better UX */
+    }
+
+    input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
+      border-color: #28a745; /* Change border color on focus */
+      outline: none; /* Remove default outline */
     }
 
     input[type="submit"] {
@@ -52,11 +59,12 @@
       border-radius: 4px;
       cursor: pointer;
       width: 100%;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.3s ease; /* Added transition */
     }
 
     input[type="submit"]:hover {
       background-color: #218838;
+      transform: translateY(-2px); /* Subtle hover effect */
     }
 
     @media (max-width: 600px) {
@@ -77,13 +85,13 @@
   <h2>We Value Your Feedback</h2>
   <form action="submit_feedback.php" method="POST">
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required aria-required="true">
 
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" placeholder="Enter your email-id" required>
+    <input type="email" id="email" name="email" placeholder="Enter your email-id" required aria-required="true">
 
     <label for="message">Your Feedback:</label>
-    <textarea id="message" name="message" rows="4" placeholder="Write your feedback/review..." required></textarea>
+    <textarea id="message" name="message" rows="4" placeholder="Write your feedback/review..." required aria-required="true"></textarea>
 
     <input type="submit" value="Submit Feedback">
   </form>
